Stop figures overflowing on mobile

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -714,6 +714,15 @@ figure .fig-desktop {
 }
 
 @media (max-width: 600px) {
+
+  figure {
+    margin: 0 15px;
+  }
+
+  .figure-dropdown {
+    right: -40px;
+  }
+
   figure .big-number {
     font-size: 80px;
     font-size: 5rem;
